--- a/package.json
+++ b/package.json
@@ -10,12 +10,15 @@
   "author": "Brian Ray",
   "license": "MIT",
   "dependencies": {
+    "angular-clipboard": "^1.3.0",
     "body-parser": "^1.15.0",
+    "clipboard": "^1.5.9",
     "express": "^4.13.4",
     "method-override": "^2.3.5",
     "mongoose": "^4.4.5"
   },
   "devDependencies": {
+    "faker": "^3.0.1",
     "gulp": "^3.9.1",
     "gulp-concat": "^2.6.0",
     "gulp-jade": "^1.1.0",
