--- a/package.json
+++ b/package.json
@@ -10,12 +10,20 @@
   "author": "Brian Ray",
   "license": "MIT",
   "dependencies": {
-    "angular-clipboard": "^1.3.0",
     "body-parser": "^1.15.0",
-    "clipboard": "^1.5.9",
     "express": "^4.13.4",
     "method-override": "^2.3.5",
     "mongoose": "^4.4.5"
+    "gulp": "^3.9.1",
+    "gulp-concat": "^2.6.0",
+    "gulp-jade": "^1.1.0",
+    "gulp-jshint": "^2.0.0",
+    "gulp-less": "^3.0.5",
+    "gulp-livereload": "^3.8.1",
+    "gulp-minify-css": "^1.2.4",
+    "gulp-nodemon": "^2.0.6",
+    "gulp-rimraf": "^0.2.0",
+    "gulp-uglify": "^1.5.3",
   },
   "devDependencies": {
     "faker": "^3.0.1",
