--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "body-parser": "^1.15.0",
     "express": "^4.13.4",
     "method-override": "^2.3.5",
-    "mongoose": "^4.4.5"
+    "mongoose": "^4.4.5",
     "gulp": "^3.9.1",
     "gulp-concat": "^2.6.0",
     "gulp-jade": "^1.1.0",
@@ -23,7 +23,7 @@
     "gulp-minify-css": "^1.2.4",
     "gulp-nodemon": "^2.0.6",
     "gulp-rimraf": "^0.2.0",
-    "gulp-uglify": "^1.5.3",
+    "gulp-uglify": "^1.5.3"
   },
   "devDependencies": {
     "faker": "^3.0.1",
