--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "gulp-nodemon": "^2.0.6",
     "gulp-rimraf": "^0.2.0",
     "gulp-uglify": "^1.5.3",
+    "gulp-watch": "^4.3.5",
     "jshint": "^2.9.1"
   },
   "repository": {
