--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "body-parser": "^1.15.0",
     "express": "^4.13.4",
     "method-override": "^2.3.5",
-    "mongoose": "^4.4.5"
+    "mongoose": "^4.4.5",
+    "passport": "^0.3.2"
   },
   "devDependencies": {
     "faker": "^3.0.1",
