--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
     "path": "^0.12.7",
-    "session": "^0.1.0"
+    "session": "^0.1.0",
+    "express-session": "^1.13.0"
   },
   "devDependencies": {
     "express-session": "^1.13.0",
