--- a/package.json
+++ b/package.json
@@ -10,21 +10,20 @@
   "author": "Brian Ray",
   "license": "MIT",
   "dependencies": {
-    "angular-cookies": "^1.5.0",
     "body-parser": "^1.15.0",
-    "cookie-parser": "^1.4.1",
     "crypto-js": "^3.1.6",
     "express": "^4.13.4",
     "express-flash": "0.0.2",
     "express-jwt": "^3.3.0",
+    "express-session": "^1.13.0",
     "jsonwebtoken": "^5.7.0",
     "method-override": "^2.3.5",
     "mongoose": "^4.4.5",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
     "path": "^0.12.7",
-    "session": "^0.1.0",
-    "express-session": "^1.13.0"
+    "sendgrid": "^2.0.0",
+    "session": "^0.1.0"
   },
   "devDependencies": {
     "express-session": "^1.13.0",
