--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "session": "^0.1.0"
   },
   "devDependencies": {
+    "chai": "^3.5.0",
     "express-session": "^1.13.0",
     "faker": "^3.0.1",
     "gulp": "^3.9.1",
@@ -39,7 +40,8 @@
     "gulp-rimraf": "^0.2.0",
     "gulp-uglify": "^1.5.3",
     "gulp-watch": "^4.3.5",
-    "jshint": "^2.9.1"
+    "jshint": "^2.9.1",
+    "mocha": "^2.4.5"
   },
   "repository": {
     "type": "git",
